<resources>
    <string name="app_name">My Prescience</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome to\nMy Prescience</string>
    <string name="facebook_app_id">1604156769815801</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="select_genre">Select genres least 3!.</string>
    <string name="select_genre_3">You choose genres more than 3.</string>
    <string name="title_activity_song_list">노래 평가하기</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="login_prescience">Welcome to My Prescience.</string>
    <string name="privacy_title">Consent to the collection and use of personal information</string>
    <string name="privacy_explain">We store your facebook ID and song rating info.\nIf you want see detail, touch this.</string>
    <string name="privacy_url">http://166.104.245.89/MyPrescience/privacy_policy_eng.html</string>
    <string name="privacy_agree">Consent</string>
    <string name="privacy_no">No</string>
    <string name="main_mix_play">Music\nPlay</string>
    <string name="main_latest_album">Latest\nAlbum</string>
    <string name="main_recommend_song">Recommend\nSong</string>
    <string name="main_introduce_title1">WE KNOW MUSIC WHAT YOU LOVE!</string>
    <string name="main_introduce_content1_1">My Prescience is</string>
    <string name="main_introduce_content1_2">Recommend Music &amp; YouTube Streaming Service.</string>
    <string name="main_introduce_content1_3">Rating music, Enjoy music for you!</string>
    <string name="main_introduce_more">See More Feature</string>
    <string name="main_introduce_title2">1.Recommend Music</string>
    <string name="main_introduce_content2_1">We Recommend you music what you love.</string>
    <string name="main_introduce_content2_2">Rating music for the exact recommended.</string>
    <string name="main_introduce_title3">2.Music Analysis</string>
    <string name="main_introduce_content3_1">Valence, Energy, Tempo</string>
    <string name="main_introduce_content3_2">Danceability, Acoustic, Live etc..</string>
    <string name="main_introduce_content3_3">Search music what you love with these property.</string>
    <string name="main_introduce_title4">3.Youtube Player</string>
    <string name="main_introduce_content4_1">Play Song with depending on the mood </string>
    <string name="main_introduce_content4_2">or circumstances. Enjoy!</string>
    <string name="main_rating_avg">Avg : </string>
    <string name="main_top_avg">Avg</string>
    <string name="main_rating_count"> people rate this.</string>
    <string name="main_detail">View</string>
    <string name="main_more">See More</string>
    <string name="main_init_menu1">MP3 Sync</string>
    <string name="main_init_menu2">Rating Song</string>
    <string name="main_init_title">Welcome to My Prescience!</string>
    <string name="main_init_message">For recommend Music, rating song!</string>
    <string name="main_error">There is a Error. Sorry.\nRe Login Please.</string>
    <string name="main_mp3_sync_start">Start MP3 Sync</string>
    <string name="main_mp3_sync_explain">Reading MP3\'s information..</string>
    <string name="main_mp3_sync_no_song">There is no mp3 or mp3\'s title and artist are incorrect.</string>
    <string name="title_section1">HOME</string>
    <string name="title_section2">RECOMMEND MUSIC</string>
    <string name="title_section3">PLAY MUSIC</string>
    <string name="title_section4">RATING MUSIC</string>
    <string name="title_section5">MY PAGE</string>
    <string name="title_section6">INQUIRY</string>
    <string name="recommend_tab1">Recommend Song</string>
    <string name="recommend_tab2">Search Song</string>
    <string name="recommend_expect_rating">Expect</string>
    <string name="recommend_view_detail">View Detail</string>
    <string name="recommend_rating">Rating</string>
    <string name="recommend_rating_explain">Rate this song!\nThis window will automatically fade out.</string>
    <string name="recommend_rating_close">close</string>
    <string name="recommend_song_property1">Valence</string>
    <string name="recommend_song_property2">Speech</string>
    <string name="recommend_song_property3">Energy</string>
    <string name="recommend_song_property4">Studio</string>
    <string name="recommend_song_property5">Dance</string>
    <string name="recommend_song_property6">Acoustic</string>
    <string name="recommend_song_property7">Instru\nmental</string>
    <string name="recommend_song_property8">Vocal\n</string>
    <string name="recommend_song_property9">Live\n</string>
    <string name="recommend_search_title">We can search song what you want.</string>
    <string name="recommend_search_subtitle1">1. Which song?</string>
    <string name="recommend_search_subtitle2">2. Which Genre?</string>
    <string name="recommend_search_subtitle3">3. Finally, choose song\'s property</string>
    <string name="recommend_search_song1">All song</string>
    <string name="recommend_search_song2">Korean song</string>
    <string name="recommend_search_song3">Pop song</string>
    <string name="recommend_not_recomm">We are recommneding for you!\nIf you want more accurate song,\nRating more song you like.</string>
    <string name="recommend_start_recom">Start recommending! After recommending is finished, we push it.</string>
    <string name="recommend_finish_recom"> music recommend finish!</string>
    <string name="recommend_noti_recom1">You may like this songs!</string>
    <string name="recommend_noti_recom2">Click this notification and see the songs Right now!</string>
    <string name="recommend_search_no_result1">There is no song.</string>
    <string name="recommend_search_no_result2">Re search Please!</string>
    <string name="genrePop">POP</string>
    <string name="genreHiphop">HIP HOP</string>
    <string name="genreRnB">R&amp;B</string>
    <string name="genreRock">ROCK</string>
    <string name="genreClub">Dance</string>
    <string name="genreDance">DANCE</string>
    <string name="genreJazz">JAZZ</string>
    <string name="genreCountry">COUNTRY</string>
    <string name="genreClassic">CLASSIC</string>
    <string name="genreElectronic">ELECTRONIC</string>
    <string name="propertyValence">Valence</string>
    <string name="propertyLoudness">Loudness</string>
    <string name="propertyDanceablility">Dance</string>
    <string name="propertyEnergy">Energy</string>
    <string name="propertyLiveness">Live</string>
    <string name="propertySpeechiness">Speechness</string>
    <string name="propertyAcousticness">Acoustic</string>
    <string name="propertyInstrumentalness">Instrumental</string>
    <string name="recommend_search">Search</string>
    <string name="recommend_search_again">Search Again</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="play_mode1">Recoomend + My Song</string>
    <string name="play_mode2">Random Song</string>
    <string name="play_theme1">Happy day</string>
    <string name="play_theme2">Sad day</string>
    <string name="play_theme3">Dance Dance</string>
    <string name="play_theme4">Emotion</string>
    <string name="play_theme5">Relaxation</string>
    <string name="play_theme6">New song</string>
    <string name="play_theme7">Cheer Up!</string>
    <string name="play_theme8">Let\'s Rock</string>
    <string name="play_theme9">Old song</string>
    <string name="play_theme10">Select Genre</string>
    <string name="play_theme11">Billboard HOT100</string>
    <string name="play_theme12">MyP Recommend</string>
    <string name="play_chose_mode">First, Choose Song Kind!</string>
    <string name="play_loading">Music is loading...</string>
    <string name="play_song_loading1">Song is loading.</string>
    <string name="play_artist_loading1">Artist is loading.</string>
    <string name="play_album_loading1">Album is loading.</string>
    <string name="play_loading2">Please wait.</string>
    <string name="play_ad_start">Ad start. Please wait.</string>
    <string name="play_end">Playlist id end.</string>
    <string name="play_select_genre1">genres are selected.</string>
    <string name="play_select_genre2">Choose genre to three or less.</string>
    <string name="rating_level1">Bronze</string>
    <string name="rating_level2">Silver</string>
    <string name="rating_level3">Gold</string>
    <string name="rating_level4">Pratinum</string>
    <string name="rating_level5">Dia</string>
    <string name="rating_level6">Master</string>
    <string name="rating_level7">Grand Master</string>
    <string name="rating_level1_explain">Your mind is dry. Listen to song.</string>
    <string name="rating_level2_explain">Let\'s start!!</string>
    <string name="rating_level3_explain">Music make you enrich?</string>
    <string name="rating_level4_explain">What is your favorite artist?</string>
    <string name="rating_level5_explain">You know how to listen to music!</string>
    <string name="rating_level6_explain">Your body is dancing!</string>
    <string name="rating_level7_explain">Music is My Life!</string>
    <string name="rating_least1">Least </string>
    <string name="rating_least2">song rate!</string>
    <string name="rating_get_all">Get all song. refresh please.</string>
    <string name="song_filter_kind1">Kind</string>
    <string name="song_filter_kind2">Genre</string>
    <string name="song_filter_kind3">Property</string>
    <string name="song_filter_song1">ALL Song</string>
    <string name="song_filter_song2">Korean Song</string>
    <string name="song_filter_song3">Latest Song</string>
    <string name="song_filter_song4">Billboard Hot100</string>
    <string name="song_filter_rating_order">Good Rating</string>
    <string name="mypage_mp3sync">MP3 Sync</string>
    <string name="mypage_song">Song</string>
    <string name="mypage_album">Album</string>
    <string name="mypage_artist">Artist</string>
    <string name="search_hint">Insert title or artist!</string>
    <string name="search_no_result1">There is no result.</string>
    <string name="search_no_result2">Type more detail Please.</string>
    <string name="song_my_score">My Score</string>
    <string name="song_no_rating">There is no rating. \nBe first one who rate this.</string>
    <string name="song_popularity_spotify">Popularity(Spotify)　:　</string>
    <string name="song_detail">Song Detail</string>
    <string name="song_mode">Mode　　　　　</string>
    <string name="song_key">Key　　　　　　　</string>
    <string name="song_tempo">Tempo　　　　</string>
    <string name="song_time_signature">Time Signature　</string>
    <string name="song_duration">Duration　　　　　</string>
    <string name="song_this_song">This Song is..</string>
    <string name="song_like..">..Like this.</string>
    <string name="song_property1">Valence#Unvalence</string>
    <string name="song_property2">Studio</string>
    <string name="song_property3">Live#Recording</string>
    <string name="song_property4">Energy#Calm</string>
    <string name="song_property5">Christmas</string>
    <string name="song_property6">Acoustic#Electronic</string>
    <string name="song_property7">Vocal</string>
    <string name="song_property8">Spechiness#No Speech</string>
    <string name="song_property9">Intrumental#Vocal</string>
    <string name="song_property10">Fast&amp;Loud#Slow&amp;Calm</string>
    <string name="song_property11">Eloctro</string>
    <string name="song_rating_score">/5.0 Rated this song.</string>
    <string name="song_play_all">Play All</string>
    <string name="song_no_video">There is no Video.</string>
</resources>