<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:id="@+id/scrollView">

    <com.myprescience.ui.SlidingRelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:padding="30dp">

        <!-- 음악종류 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="70dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_base_blue"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="음악종류" />

            <Button
                android:layout_marginTop="120dp"
                android:layout_alignParentLeft="true"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="모든노래"
                android:id="@+id/random_SongFilter" />

            <Button
                android:layout_marginTop="165dp"
                android:layout_alignParentLeft="true"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="한국 노래"
                android:id="@+id/kpop_SongFilter" />

            <Button
                android:layout_marginTop="210dp"
                android:layout_alignParentLeft="true"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="외국 노래"
                android:id="@+id/pop_SongFilter" />

            <Button
                android:layout_marginTop="255dp"
                android:layout_alignParentLeft="true"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginLeft="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="9sp"
                android:text="BillBoard\n Hot 100"
                android:id="@+id/billboardHot100_SongFilter" />

        <!-- 장르 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_base_blue"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="음악장르" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="90dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/genrePop"
                android:id="@+id/genrePop_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="165dp"
                android:layout_marginLeft="90dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/genreHiphop"
                android:id="@+id/genreHiphop_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="210dp"
                android:layout_marginLeft="90dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/genreRnB"
                android:id="@+id/genreRnB_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="255dp"
                android:layout_marginLeft="90dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/genreRock"
                android:id="@+id/genreRock_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="120dp"
                android:layout_marginRight="85dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="8sp"
                android:text="@string/genreCountry"
                android:id="@+id/genreCountry_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="165dp"
                android:layout_marginRight="85dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="9sp"
                android:text="@string/genreElectronic"
                android:id="@+id/genreElectronic_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="210dp"
                android:layout_marginRight="85dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/genreJazz"
                android:id="@+id/genreJazz_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="255dp"
                android:layout_marginRight="85dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/genreClub"
                android:id="@+id/genreClub_SongFilter" />

        <!-- 장르 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="70dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_base_blue"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="음악속성" />


            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="120dp"
                android:layout_marginRight="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="평가좋은"
                android:id="@+id/MypRankOrder_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="165dp"
                android:layout_marginRight="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/propertyValence"
                android:id="@+id/valance_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="210dp"
                android:layout_marginRight="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/propertyLoudness"
                android:id="@+id/loudness_SongFilter"
                android:visibility="gone"/>

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="210dp"
                android:layout_marginRight="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/propertyDanceablility"
                android:id="@+id/danceablility_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="255dp"
                android:layout_marginRight="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="9sp"
                android:text="@string/propertyEnergy"
                android:id="@+id/energy_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="300dp"
                android:layout_marginRight="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/propertyLiveness"
                android:id="@+id/live_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="345dp"
                android:layout_marginRight="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/propertySpeechiness"
                android:id="@+id/speechiness_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="390dp"
                android:layout_marginRight="13dp"
                android:padding="10dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/propertyAcousticness"
                android:id="@+id/acousticness_SongFilter" />

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="435dp"
                android:layout_marginRight="13dp"
                android:textColor="@color/color_base_light_blue"
                android:background="@drawable/background"
                android:textSize="10sp"
                android:text="@string/propertyInstrumentalness"
                android:id="@+id/instrumentalness_SongFilter" />

    </com.myprescience.ui.SlidingRelativeLayout>

</ScrollView>